--- a/.env
+++ b/.env
@@ -25,5 +25,5 @@ APP_SECRET=5d468277981f47b9e216a7af98f8fb6e
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:root@127.0.0.1:3306/minimizer?serverVersion=8
+DATABASE_URL=mysql://minimizer:minimizer@127.0.0.1:3306/minimizer?serverVersion=8
 ###< doctrine/doctrine-bundle ###
